Adds german strings

--- a/updraft-sdk/src/main/res/values-de/strings.xml
+++ b/updraft-sdk/src/main/res/values-de/strings.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="button.cancel">Cancel</string>
-    <string name="button.next">Next</string>
+    <string name="button.cancel">Abbrechen</string>
+    <string name="button.next">Nächste</string>
     <string name="button.ok">OK</string>
-    <string name="button.previous">Previous</string>
-    <string name="button.sendFeedback">Send Feedback</string>
-    <string name="feedback.description.placeholder">Describe the issue...\nBrevity is the source of wit</string>
+    <string name="button.previous">Vorherige</string>
+    <string name="button.sendFeedback">Feedback senden</string>
+    <string name="feedback.description.placeholder">Beschreiben Sie das Thema...</string>
     <string name="feedback.drawDescription">Draw\nsomething\nhere...</string>
-    <string name="feedback.email.placeholder">Your Email</string>
-    <string name="feedback.send.failure.description">An error occurred when sending feedback.</string>
-    <string name="feedback.send.failure.title">Failed to send feedback</string>
-    <string name="feedback.send.inProgress">Sending...</string>
-    <string name="feedback.send.success">Thank you for the feedback</string>
-    <string name="feedback.title">Give Feedback</string>
-    <string name="feedback.type.bug">Bug</string>
-    <string name="feedback.type.design">Design</string>
-    <string name="feedback.type.feedback">Feedback</string>
-    <string name="feedback.type.title">Type of Feedback</string>
-    <string name="feedbackDialog.description">Take a screenshot to give a feedback or report a bug.</string>
-    <string name="feedbackDialog.title">Give Feedback</string>
-    <string name="feedbackDisabled.description">Feedback functionality has been disabled. You can no longer send a feedback or report a bug by taking a screenshot.</string>
-    <string name="feedbackDisabled.title">Feedback Disabled</string>
-    <string name="global.error">Error</string>
-    <string name="updateAvailable.description">You will be redirected to download the new version of the app</string>
-    <string name="updateAvailable.title">New version available</string>
+    <string name="feedback.email.placeholder">Ihre E-Mail</string>
+    <string name="feedback.send.failure.description">Beim Senden des Feedbacks ist ein Fehler aufgetreten.</string>
+    <string name="feedback.send.failure.title">Feedback kann nicht gesendet werden</string>
+    <string name="feedback.send.inProgress">Senden...</string>
+    <string name="feedback.send.success">Vielen Dank für Ihr Feedback</string>
+    <string name="feedback.title">Feedback geben</string>
+    <string name="feedback.type.bug">Fehler</string>
+    <string name="feedback.type.design">Entwurf</string>
+    <string name="feedback.type.feedback">Rückmeldung</string>
+    <string name="feedback.type.title">Art der Rückmeldung</string>
+    <string name="feedbackDialog.description">Schütteln Sie das Smartphone, um ein Feedback zu geben oder einen Fehler zu melden.</string>
+    <string name="feedbackDialog.title">Feedback geben</string>
+    <string name="feedbackDisabled.description">Die Feedback-Funktion wurde deaktiviert. Sie können nicht länger ein Feedback senden oder einen Fehler melden, indem Sie das Smartphone schütteln.</string>
+    <string name="feedbackDisabled.title">Feedback Deaktiviert</string>
+    <string name="global.error">Fehler</string>
+    <string name="updateAvailable.description">Möchten Sie die neue Version herunterladen?</string>
+    <string name="updateAvailable.title">Neue Version verfügbar</string>
 </resources>
