--- a/updraft-sdk/src/main/res/values-de/strings.xml
+++ b/updraft-sdk/src/main/res/values-de/strings.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="button.cancel">Abbrechen</string>
-    <string name="button.next">Nächste</string>
-    <string name="button.ok">OK</string>
-    <string name="button.previous">Vorherige</string>
-    <string name="button.sendFeedback">Feedback senden</string>
-    <string name="feedback.description.placeholder">Beschreiben Sie das Thema...</string>
-    <string name="feedback.drawDescription">Draw\nsomething\nhere...</string>
-    <string name="feedback.email.placeholder">Ihre E-Mail</string>
-    <string name="feedback.send.failure.description">Beim Senden des Feedbacks ist ein Fehler aufgetreten.</string>
-    <string name="feedback.send.failure.title">Feedback kann nicht gesendet werden</string>
-    <string name="feedback.send.inProgress">Senden...</string>
-    <string name="feedback.send.success">Vielen Dank für Ihr Feedback</string>
-    <string name="feedback.title">Feedback geben</string>
-    <string name="feedback.type.bug">Fehler</string>
-    <string name="feedback.type.design">Entwurf</string>
-    <string name="feedback.type.feedback">Rückmeldung</string>
-    <string name="feedback.type.title">Art der Rückmeldung</string>
-    <string name="feedbackDialog.description">Schütteln Sie das Smartphone, um ein Feedback zu geben oder einen Fehler zu melden.</string>
-    <string name="feedbackDialog.title">Feedback geben</string>
-    <string name="feedbackDisabled.description">Die Feedback-Funktion wurde deaktiviert. Sie können nicht länger ein Feedback senden oder einen Fehler melden, indem Sie das Smartphone schütteln.</string>
-    <string name="feedbackDisabled.title">Feedback Deaktiviert</string>
-    <string name="global.error">Fehler</string>
-    <string name="updateAvailable.description">Möchten Sie die neue Version herunterladen?</string>
-    <string name="updateAvailable.title">Neue Version verfügbar</string>
+    <string name="updraft.button.cancel">Abbrechen</string>
+    <string name="updraft.button.next">Nächste</string>
+    <string name="updraft.button.ok">OK</string>
+    <string name="updraft.button.previous">Vorherige</string>
+    <string name="updraft.button.sendFeedback">Feedback senden</string>
+    <string name="updraft.feedback.description.placeholder">Beschreiben Sie das Thema...</string>
+    <string name="updraft.feedback.drawDescription">Draw\nsomething\nhere...</string>
+    <string name="updraft.feedback.email.placeholder">Ihre E-Mail</string>
+    <string name="updraft.feedback.send.failure.description">Beim Senden des Feedbacks ist ein Fehler aufgetreten.</string>
+    <string name="updraft.feedback.send.failure.title">Feedback kann nicht gesendet werden</string>
+    <string name="updraft.feedback.send.inProgress">Senden...</string>
+    <string name="updraft.feedback.send.success">Vielen Dank für Ihr Feedback</string>
+    <string name="updraft.feedback.title">Feedback geben</string>
+    <string name="updraft.feedback.type.bug">Fehler</string>
+    <string name="updraft.feedback.type.design">Entwurf</string>
+    <string name="updraft.feedback.type.feedback">Rückmeldung</string>
+    <string name="updraft.feedback.type.title">Art der Rückmeldung</string>
+    <string name="updraft.feedbackDialog.description">Schütteln Sie das Smartphone, um ein Feedback zu geben oder einen Fehler zu melden.</string>
+    <string name="updraft.feedbackDialog.title">Feedback geben</string>
+    <string name="updraft.feedbackDisabled.description">Die Feedback-Funktion wurde deaktiviert. Sie können nicht länger ein Feedback senden oder einen Fehler melden, indem Sie das Smartphone schütteln.</string>
+    <string name="updraft.feedbackDisabled.title">Feedback Deaktiviert</string>
+    <string name="updraft.global.error">Fehler</string>
+    <string name="updraft.updateAvailable.description">Möchten Sie die neue Version herunterladen?</string>
+    <string name="updraft.updateAvailable.title">Neue Version verfügbar</string>
 </resources>
