--- a/updraft-sdk/src/main/res/values/strings.xml
+++ b/updraft-sdk/src/main/res/values/strings.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="button.cancel">Cancel</string>
-    <string name="button.next">Next</string>
-    <string name="button.ok">OK</string>
-    <string name="button.previous">Previous</string>
-    <string name="button.sendFeedback">Send Feedback</string>
-    <string name="feedback.description.placeholder">Describe the issue...\nBrevity is the source of wit</string>
-    <string name="feedback.drawDescription">Draw\nsomething\nhere...</string>
-    <string name="feedback.email.placeholder">Your Email</string>
-    <string name="feedback.send.failure.description">An error occurred when sending feedback.</string>
-    <string name="feedback.send.failure.title">Failed to send feedback</string>
-    <string name="feedback.send.inProgress">Sending...</string>
-    <string name="feedback.send.success">Thank you for the feedback</string>
-    <string name="feedback.title">Give Feedback</string>
-    <string name="feedback.type.bug">Bug</string>
-    <string name="feedback.type.design">Design</string>
-    <string name="feedback.type.feedback">Feedback</string>
-    <string name="feedback.type.title">Type of Feedback</string>
-    <string name="feedbackDialog.description">Shake the device to give a feedback or report a bug.</string>
-    <string name="feedbackDialog.title">Give Feedback</string>
-    <string name="feedbackDisabled.description">Feedback functionality has been disabled. You can no longer send a feedback or report a bug by shaking the device.</string>
-    <string name="feedbackDisabled.title">Feedback Disabled</string>
-    <string name="global.error">Error</string>
-    <string name="updateAvailable.description">You will be redirected to download the new version of the app</string>
-    <string name="updateAvailable.title">New version available</string>
+    <string name="updraft.button.cancel">Cancel</string>
+    <string name="updraft.button.next">Next</string>
+    <string name="updraft.button.ok">OK</string>
+    <string name="updraft.button.previous">Previous</string>
+    <string name="updraft.button.sendFeedback">Send Feedback</string>
+    <string name="updraft.feedback.description.placeholder">Describe the issue...\nBrevity is the source of wit</string>
+    <string name="updraft.feedback.drawDescription">Draw\nsomething\nhere...</string>
+    <string name="updraft.feedback.email.placeholder">Your Email</string>
+    <string name="updraft.feedback.send.failure.description">An error occurred when sending feedback.</string>
+    <string name="updraft.feedback.send.failure.title">Failed to send feedback</string>
+    <string name="updraft.feedback.send.inProgress">Sending...</string>
+    <string name="updraft.feedback.send.success">Thank you for the feedback</string>
+    <string name="updraft.feedback.title">Give Feedback</string>
+    <string name="updraft.feedback.type.bug">Bug</string>
+    <string name="updraft.feedback.type.design">Design</string>
+    <string name="updraft.feedback.type.feedback">Feedback</string>
+    <string name="updraft.feedback.type.title">Type of Feedback</string>
+    <string name="updraft.feedbackDialog.description">Shake the device to give a feedback or report a bug.</string>
+    <string name="updraft.feedbackDialog.title">Give Feedback</string>
+    <string name="updraft.feedbackDisabled.description">Feedback functionality has been disabled. You can no longer send a feedback or report a bug by shaking the device.</string>
+    <string name="updraft.feedbackDisabled.title">Feedback Disabled</string>
+    <string name="updraft.global.error">Error</string>
+    <string name="updraft.updateAvailable.description">You will be redirected to download the new version of the app</string>
+    <string name="updraft.updateAvailable.title">New version available</string>
 </resources>
